# Practice_OpenGL

./: CMakeLists.txt  README.md  main.cpp
examples/: example_0.h  example_1.cpp
examples/include/: example_1.h  example_2.h
examples/src/: example_0.cpp  example_1.cpp  example_2.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/include/: shader.h
shaders/src/: shader.cpp
shaders/vertex_shaders/: 3.3.shader.vs
tools/: tools.cpp  tools.h
tools/src/: tools.cpp
